force-app/main/default/objects/sf_devops__Change_Bundle_Install__c/sf_devops__Change_Bundle_Install__c.object-meta.xml
<CustomObject>
    <description>Represents the installation of a change bundle into an environment.</description>
    <label>Change Bundle Install</label>
    <nameField>
        <displayFormat>CBI-{000000}</displayFormat>
        <label>Change Bundle Install Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change Bundle Installs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>