force-app/main/default/objects/sf_devops__Change_Bundle_Install__c/fields/sf_devops__Change_Bundle__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Change_Bundle__c</fullName>
    <description>The bundle that was installed</description>
    <label>Change Bundle</label>
    <referenceTo>sf_devops__Change_Bundle__c</referenceTo>
    <relationshipLabel>Change Bundle Installs</relationshipLabel>
    <relationshipName>Change_Bundle_Installs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>