force-app/main/default/objects/sf_devops__Change_Bundle_Install__c/fields/sf_devops__Merge_Reference__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Merge_Reference__c</fullName>
    <description>This field is deprecated and should not be referenced</description>
    <label>Merge Reference</label>
    <type>TextArea</type>
</CustomField>