force-app/main/default/objects/sf_devops__Change_Bundle_Install__c/fields/sf_devops__Status__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Status__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Async feedback for use during the installation operation.</description>
    <label>Status</label>
    <referenceTo>sf_devops__Async_Operation_Result__c</referenceTo>
    <relationshipLabel>Change Bundle Installs</relationshipLabel>
    <relationshipName>Change_Bundle_Installs</relationshipName>
    <type>Lookup</type>
</CustomField>